[package]
name = "localtunnel"
version = "0.1.6"
edition.workspace = true
description = "A CLI to proxy with localtunnel server."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=3.2, < 5.0", features = ["derive"] }
localtunnel-client = { path = "../client", version = "0.1.6" }
localtunnel-server = { path = "../server", version = "0.1.6" }
tokio = { workspace = true }
log = { workspace = true }
env_logger = "0.11"
anyhow = { workspace = true }
clio = { version = "0.3.5", features = ["clap-parse"] }
config = "0.15.18"
serde.workspace = true
