[package]
name = "localtunnel-server"
version = "0.1.6"
edition.workspace = true
description = "Server implementation of localtunnel."
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
anyhow = { workspace = true }
log = { workspace = true }
actix-web = "4"
serde = { workspace = true }
hyper = { version = "1.3", features = ["full"] }
hyper-util = "0.1"
reqwest = { version = "0.12", features = [
    "json",
    "blocking",
    "native-tls-vendored",
] }
envy = "0.4"
dotenv = "0.15.0"
thiserror = "1.0"
async-trait = "0.1"
regex = "1.7.0"
socket2 = { workspace = true }
fake = { version = "4.4.0", features = ["uuid"] }
port_check = "0.3.0"
rand = "0.9.2"
uuid = "1.18.1"
clio = "0.3.5"
serde_json = "1.0.145"
dashmap = "6.1.0"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5.0"
